# WeLivePromptApp

./: DEPLOYMENT.md  README.md  VERCEL_AI_PROMPT.md  package.json
app/: globals.css  layout.js  page.js
app/api/optimize-prompt/: route.js
docs/: CO_DEVELOPER_API_SETUP.md
legacy-desktop-reference/prompt-polisher-flet/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
legacy-desktop-reference/prompt-polisher-flet/docs/: BUILD_AND_DISTRIBUTE.md  DEVELOPER_GUIDE.md  ERROR_HANDLING.md  USER_GUIDE.md
legacy-desktop-reference/prompt-polisher-flet/scripts/: build_macos_or_linux.sh  build_windows.ps1
legacy-desktop-reference/prompt-polisher-flet/src/: main.py
legacy-desktop-reference/prompt-polisher-flet/src/prompt_polisher/: __init__.py  __main__.py  app.py  config.py  settings_store.py
legacy-desktop-reference/prompt-polisher-flet/src/prompt_polisher/core/: framework.py  language.py  models.py  parser.py  quality_gate.py  service.py
legacy-desktop-reference/prompt-polisher-flet/src/prompt_polisher/i18n/: messages.py
legacy-desktop-reference/prompt-polisher-flet/src/prompt_polisher/providers/: base.py  factory.py  ollama_provider.py  openai_provider.py
legacy-desktop-reference/prompt-polisher-flet/src/prompt_polisher/ui/: app_view.py
legacy-desktop-reference/prompt-polisher-flet/tests/: test_language.py  test_ollama_provider.py  test_parser.py  test_settings_store.py
lib/: promptBuilder.js  validation.js
tests/: validate-vercel-ready.mjs
